<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context="org.tsofen.ourstory.UserModel.LogIn">

    <Button
        android:id="@+id/login_button"
        android:layout_width="106dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/register_button"
        android:fontFamily="@font/quicksand_bold"
        android:onClick="@string/LogIN"
        android:text="@string/Login"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.885"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/holder2" />

    <Button
        android:id="@+id/facbutton"
        android:layout_width="247dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="@string/facLogin"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/imageView13"
        app:layout_constraintEnd_toEndOf="@+id/imageView13"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView13"
        app:layout_constraintTop_toTopOf="@+id/or"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/googlrbutton"
        android:layout_width="255dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="@string/googleLogin"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facbutton"
        app:layout_constraintVertical_bias="0.08" />

    <CheckBox
        android:id="@+id/checkBoxRememberMe"
        android:layout_width="195dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:buttonTint="@color/colorLogin"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/keepme"
        android:textColor="@color/colorWhite"
        android:textColorHighlight="@color/colorRegister"
        android:textColorLink="@color/colorRegister"
        android:textCursorDrawable="@color/colorRegister"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintEnd_toStartOf="@+id/login_button"
        app:layout_constraintHorizontal_bias="0.584"
        app:layout_constraintStart_toStartOf="@+id/main_container2"
        app:layout_constraintTop_toBottomOf="@+id/holder2"
        app:layout_constraintVertical_bias="0.09" />

    <FrameLayout
        android:id="@+id/main_container2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_layout">

    </FrameLayout>

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="252dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facbutton"
        app:layout_constraintVertical_bias="0.076"
        app:srcCompat="@drawable/googlefin" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="251dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/or"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/facebookfin" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="183dp"
        android:layout_height="94dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toStartOf="@+id/or"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:srcCompat="@drawable/line1" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="51dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/holder2"
        app:srcCompat="@drawable/line" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="183dp"
        android:layout_height="94dp"
        android:layout_marginStart="228dp"
        android:layout_marginLeft="228dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:srcCompat="@drawable/line1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="158dp"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/quicksand_bold"
        android:onClick="@string/changePassword"
        android:text="@string/forget"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintEnd_toEndOf="@+id/main_container2"
        app:layout_constraintHorizontal_bias="0.686"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="128dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="28dp"
        android:clickable="true"
        android:fontFamily="@font/quicksand_bold"
        android:onClick="@string/regist"
        android:text="@string/Register_now"
        android:textColor="@color/colorRegister"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/main_container2"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="@+id/main_container2"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxRememberMe" />

    <TextView
        android:id="@+id/or"
        android:layout_width="47dp"
        android:layout_height="33dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/OR"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
        app:layout_constraintEnd_toEndOf="@+id/imageView9"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.173" />

    <TextView
        android:id="@+id/emailErr"
        android:layout_width="333dp"
        android:layout_height="50dp"
        android:gravity="center|left"
        android:textColor="@android:color/holo_red_light"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/holder1" />

    <TextView
        android:id="@+id/PassError"
        android:layout_width="326dp"
        android:layout_height="50dp"
        android:layout_marginBottom="44dp"
        android:gravity="center|left"
        android:textColor="@android:color/holo_red_light"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_layout"
        android:layout_width="0dp"
        android:layout_height="@dimen/app_bar_height"
        android:background="@color/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/back_button_viewstory3"
            android:layout_width="32dp"
            android:layout_height="34dp"
            android:layout_marginTop="44dp"
            android:background="@drawable/ic_arrow_back"
            android:onClick="closeActivity"
            app:layout_constraintEnd_toStartOf="@+id/upText"
            app:layout_constraintHorizontal_bias="0.184"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="51.33dp"
            android:layout_height="23.85dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/infinity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ourstory_logo" />

        <TextView
            android:id="@+id/upText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Login"
            android:textColor="@color/colorWhite"
            android:textSize="21sp"
            app:fontFamily="@font/quicksand_bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/holder2"
        android:layout_width="328dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/holder1">

        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@drawable/edittext_legend_continuous"
            android:fontFamily="@font/quicksand"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:textColor="@color/colorWhite"
            android:textColorHighlight="@color/colorRegister"
            android:textColorHint="@color/colorGrayHint"
            android:textColorLink="@color/transparent"
            android:textCursorDrawable="@null"
            android:theme="@style/EditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="79dp"
            android:layout_height="19dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/background_gradient"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/Password"
            android:textColor="@color/colorGrayHint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/holder1"
        android:layout_width="335dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="@+id/main_container2"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="@+id/main_container2"
        app:layout_constraintTop_toTopOf="@+id/main_container2">

        <EditText
            android:theme="@style/EditText"
            android:id="@+id/showEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/edittext_legend_continuous"
            android:fontFamily="@font/quicksand"
            android:hint="@string/Email1"
            android:paddingLeft="5dp"
            android:textColor="@color/colorWhite"
            android:textColorHighlight="@color/colorRegister"
            android:textColorHint="@color/colorGrayHint"
            android:textColorLink="@color/transparent"
            android:textCursorDrawable="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="49dp"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/background_gradient"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/Email2"
            android:textColor="@color/colorGrayHint"
            app:layout_constraintBottom_toBottomOf="@+id/showEmail"
            app:layout_constraintEnd_toEndOf="@+id/showEmail"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>